--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+button {
+  @apply
+  rounded-md
+  mr-2
+  my-2
+  px-3.5
+  py-2.5
+  text-sm
+  font-semibold
+  focus-visible:outline
+  focus-visible:outline-2
+  focus-visible:outline-offset-2
+  bg-indigo-600
+  text-white shadow-sm
+  hover:bg-indigo-500
+  focus-visible:outline-indigo-600;
+
+  &.delete {
+    @apply bg-red-600 hover:bg-red-500 focus-visible:outline-red-600;
+  }
+}
