--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
 </header>
 <hr>
 <div class="p-7">
-  <app-counter></app-counter>
+  <!-- <app-counter></app-counter>
   <app-heroes-hero></app-heroes-hero>
-  <app-heroes-list></app-heroes-list>
+  <app-heroes-list></app-heroes-list> -->
+
+  <app-dbz-main-page></app-dbz-main-page>
 </div>
