Show all applications

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,44 @@
-<header class="inset-x-0 top-0 z-50 p-5">
-  <h1>{{ title }}</h1>
-</header>
-<hr>
-<div class="p-7">
-  <!-- <app-counter></app-counter>
-  <app-heroes-hero></app-heroes-hero>
-  <app-heroes-list></app-heroes-list> -->
+<nav class="bg-gray-800">
+  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+    <div class="flex h-16 items-center justify-between">
+      <div class="flex items-center">
+        <div class="flex-shrink-0">
+          <img class="h-8 w-8" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500" alt="Your Company">
+        </div>
+        <div class="hidden md:block">
+          <div class="ml-10 flex items-baseline space-x-4">
+            <a routerLink="/counter" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="menu_item">Counter</a>
+            <a routerLink="/heroes/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="menu_item">Heroes</a>
+            <a routerLink="/heroes/hero" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="menu_item">Hero</a>
+            <a routerLink="/dbz" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="menu_item">Dragon ball z</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <app-dbz-main-page></app-dbz-main-page>
-</div>
+  <!-- Mobile menu, show/hide based on menu state. -->
+  <div class="md:hidden" id="mobile-menu">
+    <div class="space-y-1 px-2 pb-3 pt-2 sm:px-3">
+      <a routerLink="/counter" routerLinkActive="active_mobile" [routerLinkActiveOptions]="{ exact: true }"  class="menu_item_mobile">Counter</a>
+      <a routerLink="/heroes" routerLinkActive="active_mobile" [routerLinkActiveOptions]="{ exact: true }"  class="menu_item_mobile">Heroes</a>
+      <a routerLink="/heroes/hero" routerLinkActive="active_mobile" [routerLinkActiveOptions]="{ exact: true }"  class="menu_item_mobile">Hero</a>
+      <a routerLink="/dbz" routerLinkActive="active_mobile" [routerLinkActiveOptions]="{ exact: true }"  class="menu_item_mobile">Dragon ball z</a>
+    </div>
+  </div>
+</nav>
+
+<header class="bg-white shadow">
+  <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
+    <h1 class="text-3xl font-bold tracking-tight text-gray-900">{{ title }}</h1>
+  </div>
+</header>
+
+<main class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
+    <router-outlet></router-outlet>
+</main>
+
+<!--
+<app-heroes-hero></app-heroes-hero>
+<app-heroes-list></app-heroes-list>
+-->
